fix mark padding alignment

--- a/src/style/partials/_layout-overrides.scss
+++ b/src/style/partials/_layout-overrides.scss
@@ -195,3 +195,7 @@ fieldset {
         border: 1px solid $border-color;
     }
 }
+
+.mark, mark {
+    padding: 0;
+}
